@@ -1,6 +1,5 @@
 package stroom.analytics.impl;
 
-import stroom.analytics.api.NotificationState;
 import stroom.analytics.impl.AnalyticDataStores.AnalyticDataStore;
 import stroom.analytics.shared.AnalyticProcessConfig;
 import stroom.analytics.shared.AnalyticProcessType;
@@ -44,7 +43,10 @@ import stroom.search.extraction.AnalyticFieldListConsumer;
 import stroom.search.extraction.ExtractionException;
 import stroom.search.extraction.ExtractionState;
 import stroom.search.extraction.FieldListConsumerHolder;
+import stroom.search.extraction.FieldValueExtractor;
+import stroom.search.extraction.FieldValueExtractorFactory;
 import stroom.search.extraction.MemoryIndex;
+import stroom.search.extraction.ValueConsumerHolder;
 import stroom.security.api.SecurityContext;
 import stroom.security.api.UserIdentity;
 import stroom.task.api.ExecutorProvider;
@@ -96,6 +98,7 @@ public class TableBuilderAnalyticExecutor {
     private final PipelineStore pipelineStore;
     private final PipelineDataCache pipelineDataCache;
     private final Provider<AnalyticsStreamProcessor> analyticsStreamProcessorProvider;
+    private final Provider<ValueConsumerHolder> valueConsumerHolderProvider;
     private final Provider<FieldListConsumerHolder> fieldListConsumerHolderProvider;
     private final Provider<ExtractionState> extractionStateProvider;
     private final AnalyticDataStores analyticDataStores;
@@ -105,7 +108,7 @@ public class TableBuilderAnalyticExecutor {
     private final ExpressionMatcher metaExpressionMatcher;
     private final NodeInfo nodeInfo;
     private final AnalyticRuleSearchRequestHelper analyticRuleSearchRequestHelper;
-    private final NotificationStateService notificationStateService;
+    private final FieldValueExtractorFactory fieldValueExtractorFactory;
 
     private final int maxMetaListSize = DEFAULT_MAX_META_LIST_SIZE;
 
@@ -120,6 +123,7 @@ public class TableBuilderAnalyticExecutor {
                                         final PipelineStore pipelineStore,
                                         final PipelineDataCache pipelineDataCache,
                                         final Provider<AnalyticsStreamProcessor> analyticsStreamProcessorProvider,
+                                        final Provider<ValueConsumerHolder> valueConsumerHolderProvider,
                                         final Provider<FieldListConsumerHolder> fieldListConsumerHolderProvider,
                                         final Provider<ExtractionState> extractionStateProvider,
                                         final TaskContextFactory taskContextFactory,
@@ -131,13 +135,14 @@ public class TableBuilderAnalyticExecutor {
                                         final AnalyticHelper analyticHelper,
                                         final NodeInfo nodeInfo,
                                         final AnalyticRuleSearchRequestHelper analyticRuleSearchRequestHelper,
-                                        final NotificationStateService notificationStateService) {
+                                        final FieldValueExtractorFactory fieldValueExtractorFactory) {
         this.executorProvider = executorProvider;
         this.detectionConsumerFactory = detectionConsumerFactory;
         this.securityContext = securityContext;
         this.pipelineStore = pipelineStore;
         this.pipelineDataCache = pipelineDataCache;
         this.analyticsStreamProcessorProvider = analyticsStreamProcessorProvider;
+        this.valueConsumerHolderProvider = valueConsumerHolderProvider;
         this.fieldListConsumerHolderProvider = fieldListConsumerHolderProvider;
         this.extractionStateProvider = extractionStateProvider;
         this.taskContextFactory = taskContextFactory;
@@ -149,19 +154,15 @@ public class TableBuilderAnalyticExecutor {
         this.analyticHelper = analyticHelper;
         this.nodeInfo = nodeInfo;
         this.analyticRuleSearchRequestHelper = analyticRuleSearchRequestHelper;
-        this.notificationStateService = notificationStateService;
-    }
-
-    private void info(final Supplier<String> messageSupplier) {
-        LOGGER.info(messageSupplier);
-        taskContextFactory.current().info(messageSupplier);
+        this.fieldValueExtractorFactory = fieldValueExtractorFactory;
     }
 
     public void exec() {
+        final TaskContext taskContext = taskContextFactory.current();
         final LogExecutionTime logExecutionTime = new LogExecutionTime();
         try {
             info(() -> "Starting table builder analytic processing");
-            processUntilAllComplete();
+            processUntilAllComplete(taskContext);
             info(() -> LogUtil.message("Finished table builder analytic processing in {}", logExecutionTime));
         } catch (final TaskTerminatedException | UncheckedInterruptedException e) {
             LOGGER.debug("Task terminated", e);
@@ -173,7 +174,7 @@ public class TableBuilderAnalyticExecutor {
         }
     }
 
-    private void processUntilAllComplete() {
+    private void processUntilAllComplete(final TaskContext taskContext) {
         securityContext.asProcessingUser(() -> {
             // Delete old data stores.
             deleteOldStores();
@@ -181,12 +182,12 @@ public class TableBuilderAnalyticExecutor {
             boolean allComplete = false;
             // Keep going until we have processed everything we can.
             while (!allComplete) {
-                allComplete = processAll();
+                allComplete = processAll(taskContext);
             }
         });
     }
 
-    private boolean processAll() {
+    private boolean processAll(final TaskContext taskContext) {
         final AtomicBoolean allComplete = new AtomicBoolean(true);
 
         // Load event and aggregate rules.
@@ -216,17 +217,16 @@ public class TableBuilderAnalyticExecutor {
                         LogUtil.namedCount("group", analyticGroupMap.size())));
 
         final List<CompletableFuture<Void>> completableFutures = new ArrayList<>();
-        final TaskContext parentTaskContext = taskContextFactory.current();
         for (final Entry<GroupKey, List<TableBuilderAnalytic>> entry : analyticGroupMap.entrySet()) {
             final Optional<CompletableFuture<Void>> optional =
-                    processGroup(parentTaskContext, entry.getKey(), entry.getValue(), allComplete);
+                    processGroup(taskContext, entry.getKey(), entry.getValue(), allComplete);
             optional.ifPresent(completableFutures::add);
         }
 
         // Join.
         CompletableFuture.allOf(completableFutures.toArray(new CompletableFuture[0])).join();
 
-        return allComplete.get() || parentTaskContext.isTerminated();
+        return allComplete.get() || taskContext.isTerminated();
     }
 
     private Optional<CompletableFuture<Void>> processGroup(final TaskContext parentTaskContext,
@@ -235,7 +235,7 @@ public class TableBuilderAnalyticExecutor {
                                                            final AtomicBoolean allComplete) {
         final DocRef pipelineRef = groupKey.pipeline();
         final String ownerUuid = groupKey.ownerUuid();
-        if (analytics.size() > 0) {
+        if (!analytics.isEmpty()) {
             final UserIdentity userIdentity = securityContext.createIdentityByUserUuid(ownerUuid);
             return securityContext.asUserResult(userIdentity, () -> securityContext.useAsReadResult(() -> {
                 final String pipelineIdentity = pipelineRef.toInfoString();
@@ -270,7 +270,7 @@ public class TableBuilderAnalyticExecutor {
         });
 
         // Now process each stream with the pipeline.
-        if (sortedMetaList.size() > 0) {
+        if (!sortedMetaList.isEmpty()) {
             final PipelineData pipelineData = getPipelineData(pipelineDocRef);
             for (final Meta meta : sortedMetaList) {
                 if (!parentTaskContext.isTerminated()) {
@@ -384,7 +384,7 @@ public class TableBuilderAnalyticExecutor {
         if (fieldListConsumers.size() > 1) {
             fieldListConsumer = new MultiAnalyticFieldListConsumer(fieldListConsumers);
         } else if (fieldListConsumers.size() == 1) {
-            fieldListConsumer = fieldListConsumers.get(0);
+            fieldListConsumer = fieldListConsumers.getFirst();
         } else {
             fieldListConsumer = null;
         }
@@ -399,6 +399,9 @@ public class TableBuilderAnalyticExecutor {
                         final FieldListConsumerHolder fieldListConsumerHolder =
                                 fieldListConsumerHolderProvider.get();
                         fieldListConsumerHolder.setFieldListConsumer(fieldListConsumer);
+
+                        final ValueConsumerHolder valueConsumerHolder = valueConsumerHolderProvider.get();
+                        valueConsumerHolder.setFieldListConsumer(fieldListConsumer);
 
                         try {
                             fieldListConsumer.start();
@@ -437,7 +440,8 @@ public class TableBuilderAnalyticExecutor {
                                 analytic.trackerData.addEventCount(extractionState.getCount());
                             });
                         }
-                    }).run();
+                        return !taskContext.isTerminated();
+                    }).get();
         }
     }
 
@@ -461,10 +465,14 @@ public class TableBuilderAnalyticExecutor {
 
         // Get the field index.
         final FieldIndex fieldIndex = lmdbDataStore.getFieldIndex();
+
+        final FieldValueExtractor fieldValueExtractor = fieldValueExtractorFactory
+                .create(searchRequest.getQuery().getDataSource(), fieldIndex);
+
         return new TableBuilderAnalyticFieldListConsumer(
                 searchRequest,
                 fieldIndex,
-                NotificationState.NO_OP,
+                fieldValueExtractor,
                 lmdbDataStore,
                 memoryIndex,
                 minEventId);
@@ -547,44 +555,38 @@ public class TableBuilderAnalyticExecutor {
                                          final AnalyticDataStore dataStore,
                                          final CurrentDbState currentDbState,
                                          final TaskContext parentTaskContext) {
-        final NotificationState notificationState = notificationStateService.getState(analytic.analyticRuleDoc);
-        // Only execute if the state is enabled.
-        notificationState.enableIfPossible();
-        if (notificationState.isEnabled()) {
-            final Provider<DetectionConsumer> detectionConsumerProvider = detectionConsumerFactory
-                    .create(analytic.analyticRuleDoc());
-            final String errorFeedName = analyticHelper.getErrorFeedName(analytic.analyticRuleDoc);
-            analyticErrorWritingExecutor.wrap(
-                    "Analytics Aggregate Rule Executor",
-                    errorFeedName,
-                    null,
-                    parentTaskContext,
-                    taskContext -> {
-                        final DetectionConsumer detectionConsumer = detectionConsumerProvider.get();
-                        detectionConsumer.start();
+        final Provider<DetectionConsumer> detectionConsumerProvider = detectionConsumerFactory
+                .create(analytic.analyticRuleDoc());
+        final String errorFeedName = analyticHelper.getErrorFeedName(analytic.analyticRuleDoc);
+        analyticErrorWritingExecutor.wrap(
+                "Analytics Aggregate Rule Executor",
+                errorFeedName,
+                null,
+                parentTaskContext,
+                taskContext -> {
+                    final DetectionConsumer detectionConsumer = detectionConsumerProvider.get();
+                    detectionConsumer.start();
+                    try {
                         try {
-                            try {
-                                runNotification(analytic,
-                                        notificationState,
-                                        detectionConsumer,
-                                        dataStore,
-                                        currentDbState);
-                            } catch (final TaskTerminatedException | UncheckedInterruptedException e) {
-                                LOGGER.debug(e::getMessage, e);
-                                throw e;
-                            } catch (final RuntimeException e) {
-                                LOGGER.error(e::getMessage, e);
-                                throw e;
-                            }
-                        } finally {
-                            detectionConsumer.end();
+                            runNotification(analytic,
+                                    detectionConsumer,
+                                    dataStore,
+                                    currentDbState);
+                            return true;
+                        } catch (final TaskTerminatedException | UncheckedInterruptedException e) {
+                            LOGGER.debug(e::getMessage, e);
+                            throw e;
+                        } catch (final RuntimeException e) {
+                            LOGGER.error(e::getMessage, e);
+                            throw e;
                         }
-                    }).run();
-        }
+                    } finally {
+                        detectionConsumer.end();
+                    }
+                }).get();
     }
 
     private void runNotification(final TableBuilderAnalytic analytic,
-                                 final NotificationState notificationState,
                                  final DetectionConsumer detectionConsumer,
                                  final AnalyticDataStore dataStore,
                                  final CurrentDbState currentDbState) {
@@ -631,10 +633,10 @@ public class TableBuilderAnalyticExecutor {
 
             searchRequest = searchRequest.copy().key(queryKey).incremental(true).build();
             // Perform the search.
-            ResultRequest resultRequest = searchRequest.getResultRequests().get(0);
+            ResultRequest resultRequest = searchRequest.getResultRequests().getFirst();
             resultRequest = resultRequest.copy().timeFilter(timeFilter).build();
             final TableResultConsumer tableResultConsumer =
-                    new TableResultConsumer(analytic.analyticRuleDoc(), notificationState, detectionConsumer);
+                    new TableResultConsumer(analytic.analyticRuleDoc(), detectionConsumer);
 
             final ColumnFormatter columnFormatter =
                     new ColumnFormatter(new FormatterFactory(null));
@@ -706,16 +708,13 @@ public class TableBuilderAnalyticExecutor {
         private static final LambdaLogger LOGGER = LambdaLoggerFactory.getLogger(TableResultConsumer.class);
 
         private final AnalyticRuleDoc analyticRuleDoc;
-        private final NotificationState notificationState;
         private final DetectionConsumer detectionConsumer;
 
         private List<Column> columns;
 
         public TableResultConsumer(final AnalyticRuleDoc analyticRuleDoc,
-                                   final NotificationState notificationState,
                                    final DetectionConsumer detectionConsumer) {
             this.analyticRuleDoc = analyticRuleDoc;
-            this.notificationState = notificationState;
             this.detectionConsumer = detectionConsumer;
         }
 
@@ -740,63 +739,61 @@ public class TableBuilderAnalyticExecutor {
 
         @Override
         public TableResultConsumer addRow(final Row row) {
-            if (notificationState.isEnabled()) {
-                try {
-                    final List<DetectionValue> values = new ArrayList<>();
+            try {
+                final List<DetectionValue> values = new ArrayList<>();
 
-                    int index = 0;
-                    Long streamId = null;
-                    Long eventId = null;
-                    for (final Column column : columns) {
-                        final String fieldValue = row.getValues().get(index);
-                        if (fieldValue != null) {
-                            final String fieldName = column.getDisplayValue();
+                int index = 0;
+                Long streamId = null;
+                Long eventId = null;
+                for (final Column column : columns) {
+                    final String fieldValue = row.getValues().get(index);
+                    if (fieldValue != null) {
+                        final String fieldName = column.getDisplayValue();
 
-                            if (IndexConstants.STREAM_ID.equals(fieldName)) {
-                                try {
-                                    streamId = Long.parseLong(fieldValue);
-                                } catch (final RuntimeException e) {
-                                    LOGGER.debug(e.getMessage(), e);
-                                }
-                            } else if (IndexConstants.EVENT_ID.equals(fieldName)) {
-                                try {
-                                    eventId = Long.parseLong(fieldValue);
-                                } catch (final RuntimeException e) {
-                                    LOGGER.debug(e.getMessage(), e);
-                                }
-                            } else {
-                                values.add(new DetectionValue(fieldName, fieldValue));
+                        if (IndexConstants.STREAM_ID.equals(fieldName)) {
+                            try {
+                                streamId = Long.parseLong(fieldValue);
+                            } catch (final RuntimeException e) {
+                                LOGGER.debug(e.getMessage(), e);
                             }
+                        } else if (IndexConstants.EVENT_ID.equals(fieldName)) {
+                            try {
+                                eventId = Long.parseLong(fieldValue);
+                            } catch (final RuntimeException e) {
+                                LOGGER.debug(e.getMessage(), e);
+                            }
+                        } else {
+                            values.add(new DetectionValue(fieldName, fieldValue));
                         }
-
-                        index++;
                     }
 
-                    final Detection detection = new Detection(
-                            DateUtil.createNormalDateTimeString(),
-                            analyticRuleDoc.getName(),
-                            analyticRuleDoc.getUuid(),
-                            analyticRuleDoc.getVersion(),
-                            null,
-                            null,
-                            analyticRuleDoc.getDescription(),
-                            null,
-                            UUID.randomUUID().toString(),
-                            0,
-                            false,
-                            values,
-                            List.of(new DetectionLinkedEvent(null, streamId, eventId))
-                    );
-
-                    detectionConsumer.accept(detection);
-
-                } catch (final TaskTerminatedException | UncheckedInterruptedException e) {
-                    LOGGER.debug(e::getMessage, e);
-                    throw e;
-                } catch (final RuntimeException e) {
-                    LOGGER.error(e::getMessage, e);
-                    throw e;
+                    index++;
                 }
+
+                final List<DetectionLinkedEvent> linkedEvents =
+                        List.of(new DetectionLinkedEvent(null, streamId, eventId));
+                final Detection detection = Detection
+                        .builder()
+                        .withDetectTime(DateUtil.createNormalDateTimeString())
+                        .withDetectorName(analyticRuleDoc.getName())
+                        .withDetectorUuid(analyticRuleDoc.getUuid())
+                        .withDetectorVersion(analyticRuleDoc.getVersion())
+                        .withDetailedDescription(analyticRuleDoc.getDescription())
+                        .withDetectionUniqueId(UUID.randomUUID().toString())
+                        .withDetectionRevision(0)
+                        .notDefunct()
+                        .withValues(values)
+                        .withLinkedEvents(linkedEvents)
+                        .build();
+
+                detectionConsumer.accept(detection);
+
+            } catch (final TaskTerminatedException | UncheckedInterruptedException e) {
+                LOGGER.debug(e::getMessage, e);
+                throw e;
+            } catch (final RuntimeException e) {
+                LOGGER.error(e::getMessage, e);
+                throw e;
             }
 
             return this;
@@ -902,6 +899,11 @@ public class TableBuilderAnalyticExecutor {
         }
         info(() -> LogUtil.message("Finished loading rules in {}", logExecutionTime));
         return analyticList;
+    }
+
+    private void info(final Supplier<String> messageSupplier) {
+        LOGGER.info(messageSupplier);
+        taskContextFactory.current().info(messageSupplier);
     }
 
     private record TableBuilderAnalytic(String ruleIdentity,
